# nx

./: Makefile  README.md  bare.py  generate.py  pyproject.toml
src/nx/: cli.py  cli_helpers.py  cli_helpers_tree.py  click_pathtype.py  config.py  nx.py  store.py
tests/: .gitignore  workbench.py
