[project]
name = "nx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewisenerd", email = "thewisenerd@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "libtorrent>=2.0.11",
    "structlog>=25.4.0",
    "tqdm>=4.67.1",
]

[project.scripts]
nx = "nx.cli:nx"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "types-libtorrent>=2.0.11.20250816",
]
