[project]
name = "nx"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewisenerd", email = "thewisenerd@protonmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "httpx[socks]>=0.28.1",
    "libtorrent>=2.0.11",
    "pyyaml>=6.0.2",
    "rich>=14.1.0",
    "structlog>=25.4.0",
    "tqdm>=4.67.1",
    "xdg-base-dirs>=6.0.2",
]

[project.scripts]
nx = "nx.cli:nx"

[build-system]
requires = ["uv_build>=0.8.6,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "ruff>=0.12.11",
    "types-libtorrent>=2.0.11.20250816",
    "types-pyyaml>=6.0.12.20250822",
]
